testdata/good/before/slots-optional/index.tw
<section>
@component('comp')@provide('h4')Textwire@end@end
</section>