testdata/bad/undefined-var-in-comp/index.tw
@component("hero")
    @provide
        <h1>Title</h1>
    @end
@end
